[gd_scene load_steps=30 format=3 uid="uid://4yw3c2xiwqnp"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_uehh5"]
[ext_resource type="Script" path="res://scripts/goal.gd" id="2_hessk"]
[ext_resource type="Script" path="res://scripts/score.gd" id="3_4owqk"]
[ext_resource type="Script" path="res://scripts/level.gd" id="4_oqgxg"]
[ext_resource type="Script" path="res://scripts/moves.gd" id="5_avtj1"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="6_vltxd"]
[ext_resource type="Texture2D" uid="uid://c5oo02cccs0h0" path="res://assets/item.png" id="7_5aq2o"]
[ext_resource type="Texture2D" uid="uid://6oqitrkpviuq" path="res://assets/selected.png" id="8_jblf8"]
[ext_resource type="Texture2D" uid="uid://catkqyvnokxqq" path="res://assets/icon.svg" id="9_buhbw"]
[ext_resource type="Script" path="res://scripts/target.gd" id="10_0p2h7"]
[ext_resource type="Texture2D" uid="uid://dtl7exe6hjt61" path="res://assets/target.png" id="11_rqv6f"]
[ext_resource type="Texture2D" uid="uid://ds8uwlih1m2t8" path="res://assets/tile_0111.png" id="12_xcjq4"]
[ext_resource type="Script" path="res://scripts/spawner.gd" id="13_vd0oj"]
[ext_resource type="PackedScene" uid="uid://u53ta3qkalt" path="res://scenes/enemy.tscn" id="14_4dda7"]

[sub_resource type="LabelSettings" id="LabelSettings_yydyr"]
resource_local_to_scene = true
font_size = 40
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jxyi8"]
resource_local_to_scene = true
font_size = 40
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3jw5f"]
resource_local_to_scene = true
font_size = 100
outline_size = 30
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_1cv38"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("score:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("score:label_settings:outline_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [30]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("goal:label_settings:outline_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_7iq7w"]
resource_name = "score_sufficient"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("score:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [100, 275, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("score:label_settings:outline_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [30, 30, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("goal:label_settings:outline_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0.615686, 0.172549, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_wf4jx"]
resource_name = "score_update"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("score:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [100, 140, 80, 100]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("score:label_settings:outline_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j7rpr"]
_data = {
"RESET": SubResource("Animation_1cv38"),
"score_sufficient": SubResource("Animation_7iq7w"),
"score_update": SubResource("Animation_wf4jx")
}

[sub_resource type="LabelSettings" id="LabelSettings_teabf"]
resource_local_to_scene = true
font_size = 40
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_unf25"]
resource_local_to_scene = true
font_size = 27
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k54rk"]
resource_local_to_scene = true
line_spacing = 0.0
font_size = 120
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2fkx0"]
resource_local_to_scene = true
line_spacing = 0.0
font_size = 80
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v83ar"]
size = Vector2(62, 60)

[sub_resource type="CircleShape2D" id="CircleShape2D_hmara"]
radius = 13.1529

[sub_resource type="Animation" id="Animation_o4c1g"]
resource_name = "spawn_enemies"
length = 2.0
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_enemy"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6fjid"]
_data = {
"spawn_enemies": SubResource("Animation_o4c1g")
}

[node name="map" type="Node2D"]

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(826, 438)
script = ExtResource("1_uehh5")

[node name="Camera2D" type="Camera2D" parent="player"]

[node name="Control" type="Control" parent="player/Camera2D"]
custom_minimum_size = Vector2(1600, 900)
layout_mode = 3
anchors_preset = 0
offset_left = -826.0
offset_top = -438.0
offset_right = 774.0
offset_bottom = 462.0

[node name="ColorRect" type="ColorRect" parent="player/Camera2D/Control"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -160.0
offset_right = 132.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.627451, 0.396078, 1)

[node name="goal" type="Label" parent="player/Camera2D/Control"]
z_index = 2
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 84.0
grow_horizontal = 2
text = "GOAL: "
label_settings = SubResource("LabelSettings_yydyr")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_hessk")

[node name="your_score_label" type="Label" parent="player/Camera2D/Control"]
z_index = 2
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 78.0
offset_right = 1.0
offset_bottom = 161.0
grow_horizontal = 2
text = "SCORE:"
label_settings = SubResource("LabelSettings_jxyi8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="player/Camera2D/Control" groups=["score"]]
z_index = 2
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -491.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_3jw5f")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_4owqk")

[node name="score_anim" type="AnimationPlayer" parent="player/Camera2D/Control/score"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_j7rpr")
}

[node name="level" type="Label" parent="player/Camera2D/Control"]
z_index = 2
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = 574.0
offset_right = -13.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
text = "LEVEL: 1"
label_settings = SubResource("LabelSettings_teabf")
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("4_oqgxg")

[node name="moves" type="Label" parent="player/Camera2D/Control" groups=["moves"]]
z_index = 2
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = 631.0
offset_right = -16.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
text = "MOVES TAKEN: 0"
label_settings = SubResource("LabelSettings_teabf")
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("5_avtj1")

[node name="CenterContainer" type="CenterContainer" parent="player/Camera2D/Control"]
z_index = 2
layout_mode = 0
offset_top = 722.0
offset_right = 1600.0
offset_bottom = 900.0

[node name="hud_container" type="GridContainer" parent="player/Camera2D/Control/CenterContainer"]
layout_mode = 2
columns = 5
script = ExtResource("6_vltxd")

[node name="item1" type="TextureRect" parent="player/Camera2D/Control/CenterContainer/hud_container"]
layout_mode = 2
texture = ExtResource("7_5aq2o")

[node name="selected_rect" type="TextureRect" parent="player/Camera2D/Control/CenterContainer/hud_container/item1"]
layout_mode = 1
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("8_jblf8")

[node name="use_control" type="Label" parent="player/Camera2D/Control/CenterContainer/hud_container/item1"]
layout_mode = 0
offset_left = 32.0
offset_top = 28.0
offset_right = 180.0
offset_bottom = 176.0
text = "1"
label_settings = SubResource("LabelSettings_unf25")
horizontal_alignment = 1
vertical_alignment = 1

[node name="item_type" type="Label" parent="player/Camera2D/Control/CenterContainer/hud_container/item1"]
layout_mode = 0
offset_top = -44.0
offset_right = 128.0
offset_bottom = 161.0
text = "+"
label_settings = SubResource("LabelSettings_k54rk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="item2" type="TextureRect" parent="player/Camera2D/Control/CenterContainer/hud_container"]
layout_mode = 2
texture = ExtResource("7_5aq2o")

[node name="use_control" type="Label" parent="player/Camera2D/Control/CenterContainer/hud_container/item2"]
layout_mode = 0
offset_left = 32.0
offset_top = 28.0
offset_right = 180.0
offset_bottom = 176.0
text = "2"
label_settings = SubResource("LabelSettings_unf25")
horizontal_alignment = 1
vertical_alignment = 1

[node name="item_type" type="Label" parent="player/Camera2D/Control/CenterContainer/hud_container/item2"]
layout_mode = 0
offset_top = -44.0
offset_right = 128.0
offset_bottom = 142.0
text = "-"
label_settings = SubResource("LabelSettings_k54rk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="item3" type="TextureRect" parent="player/Camera2D/Control/CenterContainer/hud_container"]
layout_mode = 2
texture = ExtResource("7_5aq2o")

[node name="use_control" type="Label" parent="player/Camera2D/Control/CenterContainer/hud_container/item3"]
layout_mode = 0
offset_left = 32.0
offset_top = 28.0
offset_right = 180.0
offset_bottom = 176.0
text = "3"
label_settings = SubResource("LabelSettings_unf25")
horizontal_alignment = 1
vertical_alignment = 1

[node name="item_type" type="Label" parent="player/Camera2D/Control/CenterContainer/hud_container/item3"]
layout_mode = 0
offset_top = -44.0
offset_right = 129.0
offset_bottom = 153.0
text = "x"
label_settings = SubResource("LabelSettings_2fkx0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="item4" type="TextureRect" parent="player/Camera2D/Control/CenterContainer/hud_container"]
layout_mode = 2
texture = ExtResource("7_5aq2o")

[node name="use_control" type="Label" parent="player/Camera2D/Control/CenterContainer/hud_container/item4"]
layout_mode = 0
offset_left = 32.0
offset_top = 28.0
offset_right = 180.0
offset_bottom = 176.0
text = "4"
label_settings = SubResource("LabelSettings_unf25")
horizontal_alignment = 1
vertical_alignment = 1

[node name="item_type" type="Label" parent="player/Camera2D/Control/CenterContainer/hud_container/item4"]
layout_mode = 0
offset_left = 2.0
offset_top = -44.0
offset_right = 126.0
offset_bottom = 161.0
text = "÷"
label_settings = SubResource("LabelSettings_k54rk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource("RectangleShape2D_v83ar")

[node name="player_sprite" type="Sprite2D" parent="player"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_buhbw")

[node name="target" type="Area2D" parent="." groups=["target"]]
collision_mask = 2
script = ExtResource("10_0p2h7")

[node name="target_sprite" type="Sprite2D" parent="target"]
z_index = 3
texture = ExtResource("11_rqv6f")

[node name="mouse_click" type="Sprite2D" parent="target/target_sprite"]
scale = Vector2(2, 2)
texture = ExtResource("12_xcjq4")
offset = Vector2(20, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="target"]
shape = SubResource("CircleShape2D_hmara")

[node name="spawner" type="Node" parent="."]
script = ExtResource("13_vd0oj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="spawner"]
libraries = {
"": SubResource("AnimationLibrary_6fjid")
}
autoplay = "spawn_enemies"

[node name="enemies" type="Node2D" parent="." groups=["enemies_group"]]

[node name="enemy" parent="enemies" instance=ExtResource("14_4dda7")]
value = 3

[node name="enemy2" parent="enemies" instance=ExtResource("14_4dda7")]
position = Vector2(1048, 266)
value = 12

[node name="enemy3" parent="enemies" instance=ExtResource("14_4dda7")]
position = Vector2(594, 441)
value = 7

[node name="enemy4" parent="enemies" instance=ExtResource("14_4dda7")]
position = Vector2(672, 697)

[node name="enemy5" parent="enemies" instance=ExtResource("14_4dda7")]
position = Vector2(1100, 519)
value = 8

[connection signal="transfer_new_number" from="player/Camera2D/Control/goal" to="player/Camera2D/Control/score" method="_on_goal_transfer_new_number"]
[connection signal="transfer_new_number" from="player/Camera2D/Control/goal" to="player/Camera2D/Control/moves" method="_on_goal_transfer_new_number"]
[connection signal="score_sufficient" from="player/Camera2D/Control/score" to="player/Camera2D/Control/goal" method="_on_score_score_sufficient"]
[connection signal="score_sufficient" from="player/Camera2D/Control/score" to="player/Camera2D/Control/level" method="_on_score_score_sufficient"]
[connection signal="body_entered" from="target" to="target" method="_on_body_entered"]
[connection signal="body_exited" from="target" to="target" method="_on_body_exited"]
